Tried adding dark mode, not working, need to be fixed

--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 /* Vanilla CSS */
-html{
+:root{
     scroll-behavior: smooth;
-    --theme-color : #B71DDE;
+    --theme-color : #00ce00;
     --bg : #dbdbdb;
-    --dgrey : #696969bd;
+    --dgrey : #69696986;
     --lgrey : #ffffff;
+    --font : #1b2a3b;
+ }
+
+[data-theme="dark"]{
+    scroll-behavior: smooth;
+    --theme-color : #00ce00e3;
+    --bg : #2c3e50;
+    --dgrey : #1b2a3b;
+    --lgrey : #435b759f;
+    --font : #dbdbdb;
 }
 
 body{
@@ -15,11 +25,20 @@ body{
     margin: 2vh;
     padding: 0;
     font-family: 'Ubuntu';
+    color: var(--font);
 }
 
 a{
     -webkit-appearance: none;
     text-decoration: none;
+    color: var(--theme-color);
+}
+
+.container h1{
+    text-align: center;
+    padding: 1em;
+    font-size: 300%;
+    color: var(--theme-color);
 }
 
 .header{
@@ -31,6 +50,8 @@ a{
     border-radius: 2.5em;
     box-shadow: .5em .5em 1.25em var(--dgrey),
                 -.5em -.5em 1.25em var(--lgrey);
+    align-items: center;
+    
 }
 
 .imagebox{
@@ -51,17 +72,24 @@ a{
     border-radius: 2em;
 }
 
+
+.slider{
+    align-self: center;
+    width: 3em;
+    box-shadow: .2em .2em .4em var(--dgrey),
+                -.2em -.2em .4em var(--lgrey) ;
+
+}
+
 .header a{
     text-align: center;
     color: var(--theme-color);
     font-size: larger;
 }
 
-.header{
-
+.header h1:hover,h2:hover{
+    text-decoration: underline;
 }
-
-
 
 span{
     display: block;
@@ -73,22 +101,33 @@ span{
     font-weight: 500;  
 }
 
-
 .container{
     margin-left: 20vw;
 }
 
 .card{
-    margin: 2em;
+    margin: 5em;
+    margin-top: 1em;
     padding: 2em;
     border-radius: 2em;
     box-shadow: .2em .2em 1em var(--dgrey) inset,
                 -.3em -.3em 1em var(--lgrey) inset;
 }
 
+button{
+    display: flex;
+    justify-self: center;
+    background-color: var(--bg);
+    border-radius: 50vh;
+    border: none;
+    padding: .5em;
+    color: var(--font);   
+}
+
+
 /* Event CSS Rendering */
-span:hover{
-    box-shadow: .1em .1em .2em var(--dgrey) ,
-    -.1em -.1em .2em var(--lgrey) ;
+span:hover,button:hover{
+    box-shadow: .1em .1em .2em var(--dgrey) inset,
+    -.1em -.1em .2em var(--lgrey) inset;
 }
 /* Animation */
